--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water Time!</title>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" type="image/png" href="/img/logo.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="img/logo.png">
 
 
 
@@ -39,7 +39,7 @@
         <div class="copo">
             <div class="agua" id="agua" style="height: 0;"></div>
             <div id="porcentagem" class="porcentagem">0 ml</div>
-            <script src="/script/script.js"></script>
+            <script src="script.js"></script>
         </div>
     </div>
 
